--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
+<div>
   <a href="https://creativecommons.org/licenses/by-nc/3.0/deed.en_US">
     <span>
         <b>{{ site.owner}}</b>
@@ -6,4 +7,5 @@
     {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
     <span>© {{ currentyear }}</span>
   </a>
+</div>
 </footer>
