--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer>
 <div>
   <a href="https://creativecommons.org/licenses/by-nc/3.0/deed.en_US">
-    <span>
-        <b>{{ site.owner}}</b>
-    </span>
-    {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
-    <span>© {{ currentyear }}</span>
+    <h3> 
+        <b>{{ site.owner}}</b> 
+        {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
+        © {{ currentyear }}
+    </h3>
   </a>
 </div>
 </footer>
