try to use style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-<div>
+<div style="text-align: center;">
   <a href="https://creativecommons.org/licenses/by-nc/3.0/deed.en_US">
     <h3> 
         <b>{{ site.owner}}</b> 
